# microkit-tool

./: .gitignore  CMakeLists.txt  README.md  main.cpp  microkit
include/: elf.hpp  sdf.hpp  sel4.hpp  util.hpp
